--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-nod": "dist/bin/brain-nod.js"
   },
   "files": [
     "dist"
