--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "brain-games-local",
   "version": "1.0.0",
   "description": "Console utility includes several brain games",
-  "keywords": ["brain game", "calculator", "prime numbers", "gcd", "arithmetic progression", "even numbers"],
+  "keywords": [
+    "brain game",
+    "calculator",
+    "prime numbers",
+    "gcd",
+    "arithmetic progression",
+    "even numbers"
+  ],
   "main": "index.js",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
-    "brain-nod": "dist/bin/brain-nod.js",
+    "brain-gcd": "dist/bin/brain-gcd.js",
     "brain-progression": "dist/bin/brain-progression.js",
     "brain-prime": "dist/bin/brain-prime.js"
   },
