--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   ],
   "main": "index.js",
   "bin": {
-    "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js",
-    "brain-progression": "dist/bin/brain-progression.js",
-    "brain-prime": "dist/bin/brain-prime.js"
+    "brain-even": "dist/bin/even.js",
+    "brain-calc": "dist/bin/calc.js",
+    "brain-gcd": "dist/bin/gcd.js",
+    "brain-progression": "dist/bin/progression.js",
+    "brain-prime": "dist/bin/prime.js"
   },
   "files": [
     "dist"
